--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,17 @@
         <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
   	</pluginRepository>
 	</pluginRepositories>
+	
+	<distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>corp1</id>
+      <name>Corporate Repository</name>
+      <url>scp://repo/maven2</url>
+      <layout>default</layout>
+    </repository>
+    
+</distributionManagement>
     <dependencies>
         <dependency>
             <groupId>io.dropwizard</groupId>
