--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,8 @@ server:
     applicationConnectors:
         - type: http
           port: 8081
-       
+        - type: https
+          port: 8444
           keyStorePath: dwstart.keystore
           keyStorePassword: crimson
           validateCerts: false
