--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,9 @@ password: crimson
 server:
     applicationConnectors:
         - type: http
-          port: 8081
+          port: 8080
+        - type: https
+          port: 8443
           keyStorePath: dwstart.keystore
           keyStorePassword: crimson
           validateCerts: false
