--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 ## Configuration file for DWGettingStarted application.
 ---
-# User login credentials.
+# User login.
 login: javaeeeee
 # User  password.
 password: crimson
