--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ login: javaeeeee
 # User  password.
 password: crimson
 
-#Server configuration details.
+#Server configuration.
 server:
     applicationConnectors:
         - type: http
