--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 ## Configuration file for DWGettingStarted application.
 ---
-# User login.
+# User login credentails.
 login: javaeeeee
 # User  password.
 password: crimson
