--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-## Configuration file for DWGettingStarted applications.
+## Configuration file for DWGettingStarted application.
 ---
 # User login.
 login: javaeeeee
