--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ login: javaeeeee
 # User  password.
 password: crimson
 
-#Server configuration.
+#Server configurations.
 server:
     applicationConnectors:
         - type: http
