--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<version>1.3.171</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.6</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
