--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-# Required metadata
+# Required metadata.
 sonar.projectKey=java-sonar-runner-simple
 sonar.projectName=Simple Java project analyzed with the SonarQube Runner
 sonar.projectVersion=1.0
