--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</prerequisites>
 
 	<groupId>com.javaeeeee</groupId>
-	<artifactId>DWGettingStarted</artifactId>
+	<artifactId>DWGetting</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
