--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</prerequisites>
 
 	<groupId>com.javaeeeee</groupId>
-	<artifactId>DWGetting</artifactId>
+	<artifactId>DWGettingStarted</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -171,7 +171,7 @@
 									<keep>true</keep>
 									<artifacts>
 										<artifact>
-											<file>${project.basedir}/target/${project.artifactId}.jar</file>
+											<file>${project.basedir}/target/DWGettingStarted-1.0-SNAPSHOT.jar.jar</file>
 										</artifact>
 										<artifact>
 											<file>${project.basedir}/src/main/docker/start_up.sh</file>
