--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER M1018434
 
 RUN cd /var/lib/jenkins/jobs/Test_docker/workspace/target/
 
-ADD DWGettingStarted-1.0-SNAPSHOT.jar /home/ubuntu/application/ 
+ADD DWGettingStarted.jar /home/ubuntu/application/ 
 
 ADD start_up.sh /
 
