--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,10 +1,10 @@
-FROM infomind/repos
+FROM preetick/jvcatenv
 
 MAINTAINER M1018434
 
 RUN cd /var/lib/jenkins/jobs/Test_docker/workspace/target/
 
-ADD DWGettingStarted-1.0-SNAPSHOT.jar /home/ubuntu/application/ 
+ADD DWGettingStarted-1.0.jar /home/ubuntu/application/ 
 
 ADD start_up.sh /
 
