--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-ADD DWGettingStarted-1.0.jar /home/ubuntu/application/ 
+ADD DWGettingStarted-1.0.jar /home/ubuntu/
 
 ADD start_up.sh /
 
