--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -4,6 +4,8 @@ MAINTAINER M1018434
 
 ADD DWGettingStarted-1.0.jar /home/ubuntu/
 
+COPY config.yml /home/ubuntu/config.yml
+
 ADD start_up.sh /
 
 CMD bash start_up.sh
