--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER M1018434
 
 ADD DWGettingStarted-1.0.jar /home/ubuntu/
 
-COPY config.yml /home/ubuntu/config.yml
+COPY /var/lib/jenkins/jobs/Test_docker/workspace/config.yml /home/ubuntu/config.yml
 
 ADD start_up.sh /
 
