--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,9 +2,11 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-ADD DWGettingStarted-1.1.jar /home/ubuntu/
+ADD DWGettingStarted-1.2.jar /home/ubuntu/
 
 COPY config.yml /home/ubuntu/config.yml
+
+COPY dwstart.keystore /home/ubuntu/dwstart.keystore
 
 ADD start_up.sh /
 
