--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</prerequisites>
 	<groupId>com.javaeeeee</groupId>
 	<artifactId>DWGettingStarted</artifactId>
-	<version>1.1</version>
+	<version>1.2</version>
 	<packaging>jar</packaging>
 
 	<name>${project.artifactId}</name>
@@ -175,6 +175,9 @@
 										</artifact>
 										<artifact>
 											<file>${project.basedir}/config.yml</file>
+										</artifact>
+										<artifact>
+											<file>${project.basedir}/dwstart.keystore</file>
 										</artifact>
 									</artifacts>
 									<nameAndTag>infomind/test:${project.version}</nameAndTag>
