--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,11 +2,11 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-ADD /var/lib/jenkins/jobs/test_docker/workspace/target/DWGettingStarted-1.3.jar /home/ubuntu/
+ADD DWGettingStarted-1.3.jar /home/ubuntu/
 
-COPY /var/lib/jenkins/jobs/test_docker/workspace/config.yml /home/ubuntu/config.yml
+COPY config.yml /home/ubuntu/config.yml
 
-COPY /var/lib/jenkins/jobs/test_docker/workspace/dwstart.keystore /home/ubuntu/dwstart.keystore
+COPY dwstart.keystore /home/ubuntu/dwstart.keystore
 
 ADD start_up.sh /
 
