--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,11 +2,7 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-ADD DWGettingStarted-1.5.jar /home/ubuntu/
-
-COPY config.yml /home/ubuntu/config.yml
-
-COPY dwstart.keystore /home/ubuntu/dwstart.keystore
+ADD DWGettingStarted.jar /home/ubuntu/application/
 
 ADD start_up.sh /
 
