--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,8 +2,4 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-ADD DWGettingStarted.jar /home/ubuntu/application/
-
-ADD start_up.sh /
-
-CMD bash start_up.sh
+CMD java -version
