--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,4 +2,10 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-CMD java -version
+ADD /var/lib/jenkins/jobs/test_docker/workspace/target/DWGettingStarted.jar /apps/
+
+ADD /var/lib/jenkins/jobs/test_docker/workspace/src/main/docker/start_up /apps/
+
+COPY /var/lib/jenkins/jobs/test_docker/workspace/src/main/docker/config.yml /apps/
+
+CMD bash start_up.sh
