--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,9 +2,9 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-ADD /var/lib/jenkins/jobs/test_docker/workspace/target/DWGettingStarted.jar /apps/
+ADD DWGettingStarted.jar /apps/
 
-ADD /var/lib/jenkins/jobs/test_docker/workspace/src/main/docker/start_up /apps/
+ADD start_up /apps/
 
 COPY /var/lib/jenkins/jobs/test_docker/workspace/src/main/docker/config.yml /apps/
 
