--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -6,6 +6,4 @@ ADD DWGettingStarted.jar /apps/
 
 ADD start_up.sh /apps/
 
-COPY /var/lib/jenkins/jobs/test_docker/workspace/src/main/docker/config.yml /apps/
-
-CMD bash start_up.sh
+CMD bash java -version
