--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</prerequisites>
 	<groupId>com.javaeeeee</groupId>
 	<artifactId>DWGettingStarted</artifactId>
-	<version>1.8</version>
+	<version>1.9</version>
 	<packaging>jar</packaging>
 
 	<name>${project.artifactId}</name>
@@ -173,9 +173,9 @@
 											<file>${project.basedir}/target/${project.artifactId}.jar</file>
 										</artifact>
 										
-										<artifact>
+									<!-- 	<artifact>
 											<file>${project.basedir}/src/main/docker/start_up.sh</file>
-										</artifact>
+										</artifact> -->
 										
 										<artifact>
 											<file>${project.basedir}/config.yml</file>
