--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -4,12 +4,12 @@ MAINTAINER M1018434
 
 ADD DWGettingStarted.jar /
 
+ADD start_up.sh /
+
 ADD config.yml /
 
 ADD dwstart.keystore /
 
-ADD start_up.sh /
-
-CMD bash start_up.sh
+CMD ["/bin/bash","/start_up.sh"]
 
 
