--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</prerequisites>
 	<groupId>com.javaeeeee</groupId>
 	<artifactId>DWGettingStarted</artifactId>
-	<version>2.1</version>
+	<version>2.2</version>
 	<packaging>jar</packaging>
 
 	<name>${project.artifactId}</name>
@@ -166,7 +166,7 @@
 									<id>${project.artifactId}</id>
 									<dockerFile>${project.basedir}/src/main/docker/Dockerfile</dockerFile>
 									<keep>true</keep>
-									<artifacts>
+									<!-- <artifacts>
 									
 									
 										<artifact>
@@ -187,7 +187,7 @@
 										</artifact> 
 										
 										
-									</artifacts>
+									</artifacts> -->
 									<nameAndTag>infomind/test:${project.version}</nameAndTag>
 									<!-- <registry>registry.hub.docker.com</registry> -->
 									<push>true</push>
