--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,6 +1,14 @@
-FROM preetick/jvcatenv:v1
+FROM nijisha/mt-vr-env
 
 MAINTAINER M1018434
 
+ADD DWGettingStarted.jar /apps/
 
+ADD start_up.sh /apps/
+
+ADD config.yml /apps/
+
+ADD dwstart.keystore /apps/
+
+CMD ["/bin/bash","/start_up.sh"]
 
