--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,15 +2,15 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-ADD DWGettingStarted.jar /apps/
+ADD DWGettingStarted.jar /
 
 ADD start_up.sh /
 
-ADD config.yml /apps/
+ADD config.yml /
 
 ADD dwstart.keystore /
 
-CMD bash /start_up.sh
+CMD bash start_up.sh
 
 
 
