--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -5,12 +5,13 @@ MAINTAINER M1018434
 ADD DWGettingStarted.jar /
 
 ADD start_up.sh /
+RUN chmod +x /start_up.sh
 
 ADD config.yml /
 
 ADD dwstart.keystore /
 
-CMD sudo sh ./start_up.sh
+CMD bash start_up.sh
 
 
 
