--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,17 +2,17 @@ FROM preetick/jvcatenv:v1
 
 MAINTAINER M1018434
 
-ADD DWGettingStarted.jar /DWGettingStarted.jar
+ADD DWGettingStarted.jar /apps/DWGettingStarted.jar
 
-ADD start_up.sh /start_up.sh
-RUN chmod +x /start_up.sh
+ADD start_up.sh /apps/start_up.sh
+RUN chmod +x /apps/start_up.sh
 
-ADD config.yml /config.yml
-RUN chmod +x /config.yml
+ADD config.yml /apps/config.yml
 
-ADD dwstart.keystore /dwstart.keystore
 
-CMD bash ./start_up.sh
+ADD dwstart.keystore /apps/dwstart.keystore
+
+CMD bash /apps/start_up.sh
 
 
 
