--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -8,7 +8,7 @@ ADD start_up.sh /apps/start_up.sh
 RUN chmod +x /apps/start_up.sh
 
 ADD config.yml /apps/config.yml
-
+RUN chmod +x /apps/config.yml
 
 ADD dwstart.keystore /apps/dwstart.keystore
 
