--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -12,7 +12,4 @@ RUN chmod +x /apps/config.yml
 ADD start_up.sh /apps/start_up.sh
 RUN chmod +x /apps/start_up.sh
 
-CMD bash /apps/start_up.sh
-
-
-
+CMD ["/apps/start_up.sh"]
