--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</prerequisites>
 	<groupId>com.javaeeeee</groupId>
 	<artifactId>DWGettingStarted</artifactId>
-	<version>5.2</version>
+	<version>5.3</version>
 	<packaging>jar</packaging>
 
 	<name>${project.artifactId}</name>
@@ -68,7 +68,25 @@
 
 	</dependencies>
 
+<distributionManagement>
+   <repository>
+     <uniqueVersion>true</uniqueVersion>
+     <id>s3_maven</id>
+     <url>s3://dockerregistry66/release/</url>
+     <layout>default</layout>
+   </repository>
+</distributionManagement>
+
 	<build>
+	
+	 <extensions>
+       <extension>
+           <groupId>org.springframework.build.aws</groupId>
+           <artifactId>org.springframework.build.aws.maven</artifactId>
+           <version>3.0.0.RELEASE</version>
+       </extension>
+   </extensions>
+   
 		<plugins>
 			<plugin>
 				<artifactId>maven-shade-plugin</artifactId>
