--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</prerequisites>
 	<groupId>com.javaeeeee</groupId>
 	<artifactId>DWGettingStarted</artifactId>
-	<version>5.7</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>${project.artifactId}</name>
@@ -188,7 +188,7 @@
 										
 										
 									</artifacts>
-									<nameAndTag>infomind/test:${project.version}</nameAndTag>
+									<nameAndTag>infomind/gogoprivate:${project.version}</nameAndTag>
 									<!-- <registry>registry.hub.docker.com</registry> -->
 									<push>true</push>
 								</image>
@@ -205,7 +205,7 @@
 								<image>
 									<id>${project.artifactId}</id>
 									<tags>
-										<tag>infomind/test:latest</tag>
+										<tag>infomind/gogoprivate:latest</tag>
 									</tags>
 									<push>true</push>
 								</image>
